# cippa-bot

./: .gitignore  Dockerfile  docker-compose.yaml  hello.py  jetstream.conf  pyproject.toml
bot/: __main__.py  config.py  states.py
bot/database/: models.py  requests.py
bot/dialogs/: __init__.py
bot/dialogs/main/: __init__.py  dialog.py  getters.py  handlers.py
bot/middlewares/: antiflood.py  database.py
bot/utils/: nats_connection.py
