[project]
name = "cippa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "aiogram-dialog>=2.2.0",
    "pydantic>=2.9.2",
    "unicorn>=2.1.1",
    "uvloop>=0.21.0",
    "environs>=11.0.0",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
]
