[tool.poetry]
name = "cippa-bot"
version = "0.1.0"
description = ""
authors = ["dcdnc <kuunii06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiogram-dialog = "^2.2.0"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
uvloop = "^0.21.0"
environs = "^11.0.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
orjson = "^3.10.10"
nats-py = "^2.9.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
